# temp

./: .antigravityrules  .env.example  .gitignore  CLAUDE.md  README.md  alembic.ini  pyproject.toml  requirements.txt  supabase_schema.sql
.agent/skills/frontend-design/: SKILL.md
.agent/skills/icon-library/: SKILL.md
.agent/skills/ui-ux-pro-max-skill/: SKILL.md
.agent/skills/web-design-guidelines/: SKILL.md
DOC/: ALEMBIC_GUIDE.md  ANDROID_BUILD_GUIDE.md  ARCHITECTURE.md  BEGINNER_QUICK_START.md  DEVELOPMENT_GUIDE.md  EXCHANGE_DESIGN.md  EXCHANGE_ROADMAP.md  PROJECT_HANDOVER.md  Settlement_System.md  dutchPay_AI_Dev_Guide.md  dutchPay_doc.md  목표 환율 알림.md
alembic/: env.py  script.py.mako
alembic/versions/: 20260304_0000_create_settlement_groups.py  README.md
client/: .env.example  README.md  capacitor.config.ts  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
client/android/: build.gradle
client/android/app/: build.gradle
client/android/app/src/main/: AndroidManifest.xml
client/src/: App.tsx  index.css  main.tsx
client/src/components/: DocumentViewer.tsx
client/src/core/: index.ts
client/src/core/api/: client.ts  index.ts  types.ts
client/src/core/errors/: ApiErrorHandler.ts  ErrorBoundary.tsx  ErrorFallback.tsx  index.ts
client/src/core/hooks/: index.ts  useAndroidBackButton.ts  useApi.ts  useDebounce.ts  useRateAlertChecker.ts
client/src/core/layout/: Header.tsx  MainLayout.tsx  Sidebar.tsx  index.ts
client/src/core/loading/: LoadingManager.ts  LoadingOverlay.tsx  index.ts
client/src/core/plugins/: fileDownload.ts
client/src/core/store/: index.ts  useAuthStore.ts
client/src/core/supabase/: client.ts
client/src/core/ui/: Button.tsx  Card.tsx  Input.tsx  MenuDrawer.tsx  Modal.tsx  index.ts
client/src/core/utils/: toast.ts
client/src/domains/alert/: index.ts  store.ts  types.ts
client/src/domains/alert/components/: AlertCard.tsx  AlertSetupSheet.tsx
client/src/domains/alert/pages/: AlertPage.tsx
client/src/domains/dutchpay/: api.ts  index.ts  store.ts  types.ts  utils.ts
client/src/domains/dutchpay/pages/: DutchPayLobbyPage.tsx  DutchPayPage.tsx
client/src/domains/exchange/: api.ts  constants.ts  index.ts  store.ts  types.ts
client/src/domains/exchange/components/: CalculatorModal.tsx  CurrencyList.tsx  CurrencyRow.tsx  CurrencySelector.tsx  ExchangeHeader.tsx  NumericKeypad.tsx  StatusBar.tsx  index.ts
client/src/domains/exchange/pages/: ExchangePage.tsx
client/src/domains/sample/: README.md  api.ts  index.ts  store.ts  types.ts
client/src/domains/sample/components/: SampleForm.tsx  SampleList.tsx  index.ts
client/src/domains/system/: api.ts  types.ts
client/src/domains/tip/: constants.ts  index.ts  store.ts  types.ts
server/: README.md  main.py
server/app/: __init__.py
server/app/api/: __init__.py
server/app/api/v1/: __init__.py  router.py
server/app/core/: __init__.py  config.py  database.py  dependencies.py  logging.py  middleware.py  routers.py
server/app/domain/: __init__.py
server/app/domain/dutchpay/: __init__.py  service.py
server/app/domain/system/: __init__.py  models.py  schemas.py
server/app/examples/sample_domain/: __init__.py  service.py
server/app/shared/: __init__.py
server/app/shared/base/: __init__.py  calculator.py  formatter.py  repository.py  service.py
server/app/shared/exceptions/: __init__.py
server/app/shared/types/: __init__.py
tests/: conftest.py
tests/integration/: __init__.py  test_sample_api.py
tests/unit/: __init__.py
(+21 files in other folders)
